[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "rae-pylib"
version = "1.0.0"

[tool.hatch.build]
exclude = ["*"]

[tool.hatch.envs.test]
dependencies = [
        "mypy>=1.0.0",
        "pytest>=7.2.0",
        "ruff>=0.0.249",
]
pre-install-commands = [
        "pip install -e ./lib/rae-hetzner",
]

[tool.hatch.envs.test.scripts]
test-mypy = "mypy --install-types --non-interactive ."
test-pytest = "pytest ./test"
test-ruff = "ruff ."
