[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "rae-hetzner"
version = "1.0.0"

dependencies = [
        "requests~=2.28",
]
requires-python = ">=3.8"

description = "API Access to the Hetzner Cloud"
keywords = [
        "api",
        "cloud",
        "hetzner",
]
license = "MIT OR Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"

[project.urls]
Homepage = "https://readahead.eu/p/rae-pylib"
Issues = "https://readahead.eu/p/rae-pylib/issues"
Source = "https://readahead.eu/p/rae-pylib"

[tool.hatch.build]
packages = ["src/rae_hetzner"]
